similar issue to history table misalignment with multiline help descriptions

--- a/website/issues/html/style.css
+++ b/website/issues/html/style.css
@@ -161,3 +161,10 @@ and not in the middle Issue2550809: History display misalignment */
 table.history td {
     vertical-align: top;
 }
+
+/* similar issue as above with history table. Align labels to the
+   left at the top of possible multiline description and other
+   columns */
+table.classhelp td {
+  vertical-align: top;
+}
